WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302648
REGRESSION(
303115@main
): Broke TestWebKitAPI.WebTransport.NetworkProcessCrash
https://bugs.webkit.org/show_bug.cgi?id=302648
Summary
REGRESSION(303115@main): Broke TestWebKitAPI.WebTransport.NetworkProcessCrash
Jonathan Bedard
Reported
2025-11-17 09:57:11 PST
TestWebKitAPI.WebTransport.NetworkProcessCrash started to time out after
303115@main
. History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebTransport.NetworkProcessCrash
Example:
https://build.webkit.org/#/builders/1698/builds/387
Reproduction: run-api-tests --no-build TestWebKitAPI.WebTransport.NetworkProcessCrash Logs: TestWebKitAPI.WebTransport.NetworkProcessCrash 2025-11-17 08:16:54.322 TestWebKitAPI[84110:4695980] NSEventConcurrentProcessingEnabled=NO
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-17 09:57:23 PST
<
rdar://problem/164893472
>
youenn fablet
Comment 2
2025-11-18 02:18:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54101
EWS
Comment 3
2025-11-18 04:38:35 PST
Committed
303177@main
(828430cd99e4): <
https://commits.webkit.org/303177@main
> Reviewed commits have been landed. Closing PR #54101 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug