REGRESSION(303115@main): Broke TestWebKitAPI.WebTransport.NetworkProcessCrash rdar://164893472 https://bugs.webkit.org/show_bug.cgi?id=302648

Reviewed by Chris Dumez.

Reintroduce WebTransport that was inadvertently removed as part of 303115@main.
Covered by API test no longer timing out.

* Source/WebCore/Modules/webtransport/WebTransport.cpp:
(WebCore::WebTransport::cleanup):

Canonical link: https://commits.webkit.org/303177@main